--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+a, a:hover, a:visited, a:active {
+  color: inherit;
+  text-decoration: none;
+ }
+
 body {
   font-family: sans-serif;
   margin: 20px;
@@ -56,15 +61,27 @@ ul {
   color: #FFF;
   border: 0px solid #999;
   float: left;
-  font-size: 24px;
-  font-weight: bold;
+  font-size: 18px;
   line-height: 34px;
   height: 34px;
   margin-right: -1px;
   margin-top: 20px;
   padding: 5px;
   text-align: center;
-  width: 400px;
+  min-width: 300px;
+}
+
+.player-frame-row {
+}
+
+.player-frame-title {
+  text-align: right;
+  font-weight: bold;
+}
+
+.player-frame-value {
+  text-align: left;
+  font-size: 18px;
 }
 
 .decklist {
@@ -96,7 +113,8 @@ ul {
   color: #FFF;
   background: #C97B84;
   padding: 25px;
-  border: 0px solid #FFF
+  border: 0px solid #FFF;
+  min-width: 300px;
 }
 
 .select {
