Simplify color widget, add customizable sorting

--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -106,6 +106,12 @@ ul {
   margin: 0px;
 }
 
+.header-cell {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+
 .card {
   padding: 0px;
   margin: 0px;
