--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -115,6 +115,10 @@ ul {
 .card {
   padding: 0px;
   margin: 0px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: 300px;
 }
 
 .card:hover {
