--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -147,6 +147,7 @@ ul {
   text-align: center;
   padding: 0px;
   border: 0px;
+  width: 100%;
 }
 
 .dropdown-header-side-by-side{
@@ -227,6 +228,7 @@ ul {
   padding: 0px;
   text-align: center;
   min-width: 300px;
+  width: 900px;
 }
 
 .winrate-row {
