--- a/ui/src/components/navbar.css
+++ b/ui/src/components/navbar.css
@@ -1,5 +1,15 @@
+:root {
+  --page-background: #222629;
+  --table-background: #474b4f;
+  --table-row-selected: #6b6e70;
+  --table-header-background: #61892f;
+  --highlight: #C97BF4;
+  --white: #FFF;
+  --black: #000;
+}
+
 .mid {
-  background: #C97B84;
+  background: var(--table-background);
 	display: inline-block;
 	width: 100%;
 	margin: auto;
@@ -11,6 +21,7 @@ a, a:hover, a:visited, a:active {
 }
 
 .navbar{
+  color: var(--white);
 	display:inline-block;
 }
 
@@ -22,7 +33,6 @@ a, a:hover, a:visited, a:active {
 
 .navbar li a{
   text-decoration: none;
-  color:rgb(29, 25, 231);
   font-size: 18px;
   padding:8px 20px;
   color: inherit;
@@ -30,7 +40,8 @@ a, a:hover, a:visited, a:active {
 }
 
 .navbar li a:hover{
-  background: #AE6989;
+  background: var(--table-header-background);
+  border-radius: 5px;
 }
 
 .navbar li a:active{
