Update colors and mana symbols

--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -301,6 +301,11 @@ table {
   display: none;
 }
 
+.mana-symbol {
+  vertical-align: middle;
+  margin-right: 3px;
+}
+
 .widget-table {
   background: var(--table-background);
   color: var(--white);
