--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -143,6 +143,10 @@ table {
   font-weight: bold;
   padding: 0px;
   margin: 0px;
+
+  /* Keep table header at the top even when scrolling */
+  position: sticky;
+  top: 0;
 }
 
 .header-cell {
@@ -270,6 +274,17 @@ table {
   vertical-align: top;
   max-height: 700px;
   overflow:auto;
+}
+
+.scroll-container-large {
+  vertical-align: top;
+  overflow: auto;
+  max-height: 70em;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scroll-container-large::-webkit-scrollbar {
+  display: none;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
