--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -280,6 +280,7 @@ table {
   vertical-align: top;
   overflow: auto;
   max-height: 70em;
+  min-height: 70em;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
