--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -269,9 +269,23 @@ table {
 .scroll-container-large {
   vertical-align: top;
   overflow: auto;
+  margin-right: auto;
+  margin-left: auto;
   max-height: 70em;
   min-height: 70em;
+  width: 75%;
 }
+
+.scroll-container-large-header {
+  top: 0;
+  position: sticky;
+  background: var(--table-row-selected);
+  color: var(--white);
+  margin-right: auto;
+  margin-left: auto;
+  width: 75%;
+}
+
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .scroll-container-large::-webkit-scrollbar {
@@ -357,6 +371,18 @@ table {
 /* The max width is dependant on the container (more info below) */
 .popover{
     max-width: 500px ! important; /* Max Width of the popover (depending on the container!) */
+}
+
+.chart-container {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.chart{
+  background: var(--table-background);
+  color: var(--white);
+  max-width: 75%;
+  min-height: 600px;
 }
 
 .widget-table {
