Switch from checkboxes to buttons finally

--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -198,6 +198,13 @@ table {
   background: var(--table-row-selected);
 }
 
+.button {
+}
+
+.button-selected {
+  background: var(--misc);
+}
+
 .deck-entry {
   background-color: var(--background-color);
   padding: 0px;
