--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -443,6 +443,16 @@ table {
   min-height: 600px;
 }
 
+.widget-table-header {
+  top: 0;
+  position: sticky;
+  background: var(--table-row-selected);
+  color: var(--white);
+  margin-right: auto;
+  margin-left: auto;
+  width: 100%;
+}
+
 .widget-table {
   background: var(--table-background);
   color: var(--white);
